--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -76,11 +76,15 @@
       </div>
       <div class="two-columns">
         <div class="content-block">
-          <video autoplay loop disablepictureinpicture>
-            <source type="video/webm" src="{{ static('video/thunderbird/features/services-high-res.webm') }}"/>
-            <source type="video/mp4" src="{{ static('video/thunderbird/features/services-high-res.mp4') }}"/>
-            <p>{{ _('A video of Thunderbird with various email service icons rotating around it.') }}</p>
-          </video>
+          {{
+            video('video/thunderbird/features/services-high-res.mp4',
+            poster_path='img/thunderbird/base/features/services.avif',
+            alt_text=_('A video of Thunderbird with various email service icons rotating around it.'),
+            alt_formats=('webm',),
+            loop=True,
+            auto_play=True,
+            disable_pip=True)
+          }}
         </div>
         <div class="section-text">
           <h3>{{ _('Multiple Account Support ') }}</h3>
@@ -110,11 +114,15 @@
       {# ...back to features #}
       <div class="two-columns flip-columns">
         <div class="content-block">
-          <video autoplay loop disablepictureinpicture>
-            <source type="video/webm" src="{{ static('video/thunderbird/features/encryption-high-res.webm') }}"/>
-            <source type="video/mp4" src="{{ static('video/thunderbird/features/encryption-high-res.mp4') }}"/>
-            <p>{{ _('A video of an envelope with password masking asterisks in front of it.') }}</p>
-          </video>
+          {{
+            video('video/thunderbird/features/encryption-high-res.mp4',
+            poster_path='img/thunderbird/base/features/encryption.avif',
+            alt_text=_('A video of an envelope with password masking asterisks in front of it.'),
+            alt_formats=('webm',),
+            loop=True,
+            auto_play=True,
+            disable_pip=True)
+          }}
         </div>
         <div class="section-text">
           <h3>{{ _('Advanced Email Encryption') }}</h3>
@@ -124,11 +132,15 @@
       </div>
       <div class="two-columns">
         <div class="content-block">
-          <video autoplay loop disablepictureinpicture>
-            <source type="video/webm" src="{{ static('video/thunderbird/features/lightdark-high-res.webm') }}"/>
-            <source type="video/mp4" src="{{ static('video/thunderbird/features/lightdark-high-res.mp4') }}"/>
-            <p>{{ _('A video of the Thunderbird for Android\'s interface transitioning from light mode to dark mode and back again.') }}</p>
-          </video>
+          {{
+            video('video/thunderbird/features/lightdark-high-res.mp4',
+            poster_path='img/thunderbird/base/features/lightdark.avif',
+            alt_text=_('A video of the Thunderbird for Android\'s interface transitioning from light mode to dark mode and back again.'),
+            alt_formats=('webm',),
+            loop=True,
+            auto_play=True,
+            disable_pip=True)
+          }}
         </div>
         <div class="section-text">
           <h3>{{ _('Light and Dark Interface') }}</h3>
