Add giftbox asset

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -155,7 +155,7 @@
       </div>
       <div class="two-columns flip-columns">
         <div class="content-block">
-          {{ svg('logo') }}
+          {{ high_res_img('thunderbird/base/features/gift.png', {'alt': _('The Thunderbird logo in an opened gift box.')}, alt_formats=('avif', 'webp')) }}
         </div>
         <div class="section-text">
           <h3>{{ _('Always Free and Open') }}</h3>
