Mark the old download button function as deprecated.

--- a/sites/www.thunderbird.net/download/index.html
+++ b/sites/www.thunderbird.net/download/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="section-text">
       <h1>{{ _('Download <span class="txt-gradient">Thunderbird</span>') }}</h1>
-      {{ download_thunderbird(force_direct=true, alt_copy=_('Download'), section="homepage-bottom") }}
+      {{ download_smart('btn-gradient', 'download-button-products') }}
     </div>
   </div>
 </section>
