Swap to webm by default (despite safari not correctly looping the video.)

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -58,10 +58,10 @@
       <div class="two-columns">
         <div class="content-block">
           {{
-            video('video/thunderbird/features/services-high-res.mp4',
+            video('video/thunderbird/features/services-high-res.webm',
             poster_path='img/thunderbird/base/features/services.avif',
             alt_text=_('A video of Thunderbird with various email service icons rotating around it.'),
-            alt_formats=('webm',),
+            alt_formats=('mp4',),
             loop=True,
             auto_play=True,
             disable_pip=True)
@@ -88,10 +88,10 @@
       <div class="two-columns">
         <div class="content-block">
           {{
-            video('video/thunderbird/features/platforms-high-res.mp4',
+            video('video/thunderbird/features/platforms-high-res.webm',
             poster_path='img/thunderbird/base/features/platforms.avif',
             alt_text=_('A video of a heart with various operating system logos around it.'),
-            alt_formats=('webm',),
+            alt_formats=('mp4',),
             loop=True,
             auto_play=True,
             disable_pip=True)
@@ -137,10 +137,10 @@
       <div class="two-columns">
         <div class="content-block">
           {{
-            video('video/thunderbird/features/secure-high-res.mp4',
+            video('video/thunderbird/features/secure-high-res.webm',
             poster_path='img/thunderbird/base/features/secure.avif',
             alt_text=_('A video of a shield with the Thunderbird logo in the center of it.'),
-            alt_formats=('webm',),
+            alt_formats=('mp4',),
             loop=True,
             auto_play=True,
             disable_pip=True)
