--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -78,10 +78,10 @@
       <div class="two-columns">
         <div class="content-block">
           {{
-            video('video/thunderbird/features/services-high-res.mp4',
+            video('video/thunderbird/features/services-high-res.webm',
             poster_path='img/thunderbird/base/features/services.avif',
             alt_text=_('A video of Thunderbird with various email service icons rotating around it.'),
-            alt_formats=('webm',),
+            alt_formats=('mp4',),
             loop=True,
             auto_play=True,
             disable_pip=True)
@@ -116,10 +116,10 @@
       <div class="two-columns flip-columns">
         <div class="content-block">
           {{
-            video('video/thunderbird/features/encryption-high-res.mp4',
+            video('video/thunderbird/features/encryption-high-res.webm',
             poster_path='img/thunderbird/base/features/encryption.avif',
             alt_text=_('A video of an envelope with password masking asterisks in front of it.'),
-            alt_formats=('webm',),
+            alt_formats=('mp4',),
             loop=True,
             auto_play=True,
             disable_pip=True)
@@ -134,10 +134,10 @@
       <div class="two-columns">
         <div class="content-block">
           {{
-            video('video/thunderbird/features/lightdark-high-res.mp4',
+            video('video/thunderbird/features/lightdark-high-res.webm',
             poster_path='img/thunderbird/base/features/lightdark.avif',
             alt_text=_('A video of the Thunderbird for Android\'s interface transitioning from light mode to dark mode and back again.'),
-            alt_formats=('webm',),
+            alt_formats=('mp4',),
             loop=True,
             auto_play=True,
             disable_pip=True)
