Hide quote sections, and some links

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -71,7 +71,6 @@
           <h3>{{ _('Multiple Account Support') }}</h3>
           <h4>{{ _('Manage all your emails in one place.') }}</h4>
           <p>{{ _('All your email accounts have a home in Thunderbird. Manage accounts separately or in a unified Inbox. Search and organize with ease. Say goodbye to all those browser tabs!') }}</p>
-          <a class="strong" href="{{ url('thunderbird.index') }}">{{ _('See Compatability Chart') }}</a>
         </div>
       </div>
       <div class="two-columns flip-columns">
@@ -104,7 +103,8 @@
           <a class="strong" href="{{ url('thunderbird.latest.all') }}">{{ _('See All Available Versions') }}</a>
         </div>
       </div>
-      {# Quote section #}
+      {# Quote section - Let's hide this for now. #}
+      {#
       <div class="section-quote testimonials">
         <div class="quote">
           <q>
@@ -123,6 +123,7 @@
           </div>
         </div>
       </div>
+      #}
       {# ...back to features #}
       <div class="two-columns flip-columns">
         <div class="content-block">
