--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -93,7 +93,8 @@
           <p>{{ _('Sync with email accounts for home, school, and work. Almost anywhere you receive messages, we will have you covered.') }}</p>
         </div>
       </div>
-      {# Quote section #}
+      {# Quote section - Let's hide this for now. #}
+      {#
       <div class="section-quote testimonials">
         <div class="quote">
           <q>
@@ -112,6 +113,7 @@
           </div>
         </div>
       </div>
+      #}
       {# ...back to features #}
       <div class="two-columns flip-columns">
         <div class="content-block">
