--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -171,10 +171,21 @@
       </div>
     </div>
 
-    {# No javascript / source of truth for download links #}
+    {# No javascript / source of truth for esr download links #}
     <div id="all-downloads" data-thunderbird-version="{{ latest_thunderbird_version }}">
       <div class="section-text">
-        <h1>{{ _('Get <span class="txt-gradient">Thunderbird</span>') }}</h1>
+        <h2 class="split-text" aria-label="{{ _('Thunderbird Mobile.') }}" style="justify-content: center">
+          {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Mobile') }}</span>
+        </h2>
+        <p>{{ _('These are officially maintained and distributed by Thunderbird Mobile.') }}</p>
+        <div class="download-spacing">
+        {{ download_mobile_btns() }}
+        </div>
+      </div>
+      <div class="section-text">
+        <h2 class="split-text" aria-label="{{ _('Thunderbird Desktop.') }}" style="justify-content: center">
+          {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Desktop') }}</span>
+        </h2>
         <p>{{ _('These are officially maintained and distributed by Thunderbird.') }}</p>
         <p>{{ _('Jump to the language you wish to download by using the legend below.') }}</p>
       </div>
