Add the option to hide download options & donate footer on the download-smart macro

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div class="hero-download">
-        {{ download_smart('btn-gradient', 'download-button-products', 'desktop') }}
+        {{ download_smart('btn-gradient', 'download-button-products', 'desktop', hide_download_options=True) }}
       </div>
     </div>
   </section>
