--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -30,7 +30,7 @@
         </p>
       </div>
       <div class="hero-download">
-        {{ download_smart('btn-gradient', 'download-button-products', 'android') }}
+        {{ download_smart('btn-gradient', 'download-button-products', 'android', hide_download_options=True) }}
       </div>
     </div>
   </section>
