--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
@@ -9,35 +9,74 @@
 {% set active_page = "appeal-nov24" %}
 {% extends "includes/base/base.html" %}
 {% block base_css %}
-<link href="{{ static('css/appeal-nov24-style.css') }}" rel="stylesheet" type="text/css" />
+  <link href="{{ static('css/appeal-nov24-style.css') }}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block page_title %}{{ _('20 Years of Thunderbird!') }}{% endblock %}
 
 {% block content %}
-<section id="twenty-years">
-  <div class="container">
-    <div class="section-text">
-      <h1>{{ _('Thunderbird') }} <span role="complementary">{{ _('Turns 20, Thanks to You!') }}</span></h1>
-      <div class="header-graphic">
-        {{ high_res_img('thunderbird/appeal/nov24/header-graphic.png', {'alt': _('The text 20 Years with a the Thunderbird logo in place of the zero.')}, alt_formats=('avif', 'webp')) }}
+  <section id="twenty-years">
+    <div class="container">
+      <div class="section-text">
+        <h1>{{ _('Thunderbird') }} <span role="complementary">{{ _('Turns 20, Thanks to You!') }}</span></h1>
+        <div class="header-graphic">
+          {{ high_res_img('thunderbird/appeal/nov24/header-graphic.png', {'alt': _('The text 20 Years with a the Thunderbird logo in place of the zero.')}, alt_formats=('avif', 'webp')) }}
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<section id="appeal">
-  <div class="container">
-    <div class="copy-section section-text">
-      <p>{{ _('On December 7, 2004, Thunderbird 1.0 was released.') }}</p>
-      <p>{{ _('Thunderbird is free. Free to use. Free of ads. Free of data tracking.') }}</p>
-      <p>{{ _('We rely solely on the generosity of our supporters and less than <b>3% of Thunderbird users keep us going.</b>') }}</p>
-      <p><b>{{ _('Please help us continue for another 20 years.') }}</b></p>
+  </section>
+  <section id="appeal">
+    <div class="container">
+      <div class="copy-section section-text">
+        <p>{{ _('On December 7, 2004, Thunderbird 1.0 was released.') }}</p>
+        <p>{{ _('Thunderbird is free. Free to use. Free of ads. Free of data tracking.') }}</p>
+        <p>{{ _('We rely solely on the generosity of our supporters and less than <b>3% of Thunderbird users keep us going.</b>') }}</p>
+        <p><b>{{ _('Please help us continue for another 20 years.') }}</b></p>
+      </div>
     </div>
-  </div>
-</section>
-<section id="timeline">
-<div class="container">
-  <div class="timeline-line"></div>
+  </section>
+  <section id="timeline">
+    <div class="container">
+      <div class="timeline-connector">
+        {{ svg('appeal/nov24/timeline-connector') }}
+      </div>
+      <div class="timeline-line"></div>
+      <div class="feature">
+        <div class="timeline-blip">
+          <h3>2004</h3>
+          <div class="blip"></div>
+        </div>
 
-</div>
-</section>
+        <div class="screenshot">
+        {{ high_res_img('thunderbird/appeal/nov24/screen-2004.png', {'alt': _('A screenshot of Thunderbird in 2004.')}, alt_formats=()) }}
+        </div>
+      </div>
+      <div class="feature">
+        <div class="timeline-blip">
+          <h3>2009</h3>
+          <div class="blip"></div>
+        </div>
+        <div class="screenshot">
+        {{ high_res_img('thunderbird/appeal/nov24/screen-2009.png', {'alt': _('A screenshot of Thunderbird in 2009.')}, alt_formats=()) }}
+        </div>
+      </div>
+      <div class="feature">
+        <div class="timeline-blip">
+          <h3>2018</h3>
+          <div class="blip"></div>
+        </div>
+        <div class="screenshot">
+        {{ high_res_img('thunderbird/appeal/nov24/screen-2018.png', {'alt': _('A screenshot of Thunderbird in 2018.')}, alt_formats=()) }}
+        </div>
+      </div>
+      <div class="feature">
+        <div class="timeline-blip">
+          <h3>2024</h3>
+          <div class="blip"></div>
+        </div>
+        <div class="screenshot">
+        {{ high_res_img('thunderbird/appeal/nov24/screen-2024.png', {'alt': _('A screenshot of Thunderbird in 2024.')}, alt_formats=()) }}
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
