Fix a couple of copy issues

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -21,7 +21,7 @@
     <div class="container hero">
       <div class="hero-text">
         <h1 class="split-text tagline" aria-label="{{ _('Thunderbird Desktop.') }}">
-          {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Desktop') }}</span>
+          {{ _('Thunderbird <span class="txt-gradient">Desktop</span>') }}
         </h1>
         <p class="sub-tag">
           {% trans trimmed %}
@@ -48,7 +48,7 @@
     <div class="container container-tight">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Core Features.') }}">
-          {{ _('Core') }}&nbsp;<span class="txt-gradient">{{ _('Features') }}</span>
+          {{ _('Core <span class="txt-gradient">Features</span>') }}
         </h2>
         <h4>
           {{ _('Your new productivity superpowers.') }}
@@ -132,7 +132,7 @@
         <div class="section-text">
           <h3>{{ _('Calendar, Contacts, and Tasks') }}</h3>
           <h4>{{ _('Because email is just one part of being productive.') }}</h4>
-          <p>{{ _('Thunderbird helps your manage your appointments, contact, and tasks. Stay organized, productive, and connected in one place.') }}</p>
+          <p>{{ _('Thunderbird helps your manage your appointments, contacts, and tasks. Stay organized, productive, and connected in one place.') }}</p>
         </div>
       </div>
       <div class="two-columns">
@@ -172,7 +172,7 @@
     <div class="container">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Third-Party Ecosystem.') }}">
-          {{ _('Third-Party') }}&nbsp;<span class="txt-gradient">{{ _('Ecosystem') }}</span>
+          {{ _('Third-Party <span class="txt-gradient">Ecosystem</span>') }}
         </h2>
         <h4>
           {{ _('What you can do with Thunderbird doesn\'t stop with us.') }}
@@ -189,7 +189,7 @@
     <div class="container">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Helpful Resources.') }}">
-          {{ _('Helpful') }}&nbsp;<span class="txt-gradient">{{ _('Resources') }}</span>
+          {{ _('Helpful <span class="txt-gradient">Resources</span>') }}
         </h2>
         <h4>
           {{ _('Level up your Thunderbird Skills.') }}
