--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -20,7 +20,7 @@
     <div class="container hero">
       <div class="hero-text">
         <h2 class="split-text tagline" aria-label="{{ _('Thunderbird Mobile.') }}">
-          {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Mobile') }}</span>
+          {{ _('Thunderbird <span class="txt-gradient">Mobile</span>') }}
         </h2>
         <p class="sub-tag">
           {% trans trimmed %}
@@ -47,7 +47,7 @@
     <div class="container container-tight">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Core Features.') }}">
-          {{ _('Core') }}&nbsp;<span class="txt-gradient">{{ _('Features') }}</span>
+          {{ _('Core <span class="txt-gradient">Features</span>') }}
         </h2>
         <h4>
           {{ _('Your new productivity superpowers.') }}
@@ -169,7 +169,7 @@
     <div class="container">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Instant Setup.') }}">
-          {{ _('Instant') }}&nbsp;<span class="txt-gradient">{{ _('Setup') }}</span>
+          {{ _('Instant <span class="txt-gradient">Setup</span>') }}
         </h2>
         <h4>
           {{ _('Thunderbird Desktop users can migrate their settings quickly. Just scan the desktop app QR code from the mobile app.') }}
@@ -185,7 +185,7 @@
     <div class="container">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Helpful Resources.') }}">
-          {{ _('Helpful') }}&nbsp;<span class="txt-gradient">{{ _('Resources') }}</span>
+          {{ _('Helpful <span class="txt-gradient">Resources</span>') }}
         </h2>
         <h4>
           {{ _('Level up your Thunderbird Skills.') }}
