--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -59,7 +59,7 @@
             </ul>
           </div>
           <div>
-            <h4>{{ _('Mobile:') }}</h4>
+            <h4>{{ _('Android:') }}</h4>
             <ul class="styled-list">
               <li>{{ _('Learn about testing <a href="%(url)s">Beta</a>')|format(url=url('participate.test.android.beta')) }}</li>
               <li>{{ _('Report <a href="%(url)s">bugs</a>')|format(url=url('participate.test.android.bugs')) }}</li>
@@ -78,7 +78,7 @@
             </ul>
           </div>
           <div>
-            <h4>{{ _('Mobile:') }}</h4>
+            <h4>{{ _('Android:') }}</h4>
             <ul class="styled-list">
               <li>{{ _('Explore the <a href="%(url)s">docs</a>')|format(url=url('participate.translate.android.docs')) }}</li>
               <li>{{ _('Join us on <a href="%(url)s">Weblate</a>')|format(url=url('participate.translate.android.weblate')) }}</li>
@@ -97,7 +97,7 @@
               </ul>
             </div>
             <div>
-              <h4>{{ _('Mobile:') }}</h4>
+              <h4>{{ _('Android:') }}</h4>
               <ul class="styled-list">
                 <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>')|format(url=url('participate.support.android.matrix')) }}</li>
               </ul>
@@ -116,7 +116,7 @@
               </ul>
             </div>
             <div>
-              <h4>{{ _('Mobile:') }}</h4>
+              <h4>{{ _('Android:') }}</h4>
               <ul class="styled-list">
                 <li>{{ _('User Support <a href="%(url)s">documentation</a>')|format(url=url('participate.document.android.user')) }}</li>
               </ul>
