--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -18,7 +18,7 @@
         <div class="section-text">
           <div class="section-title">
             <h2 class="split-text" aria-label="{{ _('Thunderbird Desktop.') }}">
-              {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Desktop') }}</span>
+              {{ _('Thunderbird <span class="txt-gradient">Desktop</span>') }}
             </h2>
           </div>
           <p>{{ _('These are officially maintained and distributed by Thunderbird. Download the latest Release version unless you wish to test the Beta version and report bugs.') }}</p>
@@ -136,7 +136,7 @@
         <div class="section-text">
           <div class="section-title">
             <h2 class="split-text" aria-label="{{ _('Thunderbird Mobile.') }}">
-              {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Mobile') }}</span>
+              {{ _('Thunderbird <span class="txt-gradient">Mobile</span>') }}
               <span class="new-badge">{{ _('New') }}</span>
             </h2>
           </div>
@@ -175,7 +175,7 @@
     <div id="all-downloads" data-thunderbird-version="{{ latest_thunderbird_version }}">
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Thunderbird Mobile.') }}" style="justify-content: center">
-          {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Mobile') }}</span>
+          {{ _('Thunderbird <span class="txt-gradient">Mobile</span>') }}
         </h2>
         <p>{{ _('These are officially maintained and distributed by Thunderbird Mobile.') }}</p>
         <div class="download-spacing">
@@ -184,7 +184,7 @@
       </div>
       <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Thunderbird Desktop.') }}" style="justify-content: center">
-          {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Desktop') }}</span>
+          {{ _('Thunderbird <span class="txt-gradient">Desktop</span>') }}
         </h2>
         <p>{{ _('These are officially maintained and distributed by Thunderbird.') }}</p>
         <p>{{ _('Jump to the language you wish to download by using the legend below.') }}</p>
